# cpptemplate

./: CMakeLists.txt  README.md
include/cpptemplate/: main.hpp
src/: main.cpp
